crates/sui-gql-client/src/queries/snapshots/sui_gql_client__queries__latest_objects_version__gql_output.snap
---
source: crates/sui-gql-client/src/queries/latest_objects_version.rs
expression: operation.query
---
query Query($filter: ObjectFilter, $after: String, $first: Int) {
  checkpoint {
    sequenceNumber
  }
  objects(filter: $filter, first: $first, after: $after) {
    nodes {
      version
      address
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
