crates/sui-gql-client/src/queries/snapshots/sui_gql_client__queries__latest_objects_version__page_gql_output.snap
---
source: crates/sui-gql-client/src/queries/latest_objects_version.rs
expression: operation.query
---
query QueryPage($filter: ObjectFilter, $after: String, $first: Int) {
  objects(filter: $filter, first: $first, after: $after) {
    nodes {
      version
      address
    }
    pageInfo {
      hasNextPage
      endCursor
    }
  }
}
